# fluister-webui

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: __init__.py  assign.py  audio.py  config.py  cuda_libs.py  db.py  diarizer.py  filename_time.py  formats.py  insights.py  llm_server.py  main.py  models.py  queue.py  speakers.py  tidier.py  transcriber.py
app/static/: app.js  index.html  style.css
app/static/js/: palette.js  theme.js  wave.js
docs/superpowers/plans/: 2026-06-09-llm-tidy-readable-transcript.md
docs/superpowers/specs/: 2026-06-06-click-to-play-audio-design.md  2026-06-06-per-person-hotwords-design.md  2026-06-06-speaker-diarization-design.md  2026-06-06-transcribe-design.md  2026-06-09-llm-tidy-readable-transcript-design.md  2026-06-19-fluister-ui-rework-design.md
tests/: conftest.py  test_api.py  test_assign.py  test_attach_words.py  test_audio.py  test_audio_endpoint.py  test_config_llm.py  test_diarize_gate.py  test_diarizer.py  test_filename_time.py  test_formats.py  test_hotwords.py  test_insights.py  test_llm_server.py  test_search.py  test_speakers.py  test_tidied_column.py  test_tidier.py  test_tidy_pipeline.py  test_transcriber.py
