[project]
name = "fluister-webui"
version = "0.1.0"
description = "Local Dutch/English audio transcription service with a web UI (faster-whisper + FastAPI)"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "faster-whisper>=1.1.0",
    "nvidia-cublas-cu12>=12.3",
    "nvidia-cudnn-cu12>=9.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "anyio>=4",
]

# This is an application, not a library: don't try to build/install the project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "slow: end-to-end tests that load a real model (run with RUN_SLOW_TESTS=1)",
]
